IN DEVELOPMENT ======= 1.3.0

- added: builders.schema supports join models
- added: controller.custom()
- added: controller.clear()
- added: controller.noClear()
- added: FrameworkImage.measure(callback)
- added: HttpFile.stream()
- added: HttpFile.measure(callback)
- added: framework.onRequest(req, res)
- added: framework.worker()
- added: framework.workers
- added: supports 400 (Bad request)
- added: config.ip, config.port
- added: framework.reconnect()
- added: framework.on('ready')
- added: Number.parseDate([plus])
- added: framework.fs.create.temporary(name, stream, [callback])
- added: framework.fs.rm.temporary(name)
- added: dynamic render View and Template from string
- added: framework.responseImage(req, res, filename/stream, fnProcess, [headers], [isIM])
- added: controller.image(filename/stream, fnProcess, [headers], [isIM])

- updated: FrameworkImage supports stream (image.pipe() and new Image(stream or filename))
- updated: nosql (extended buffer)
- updated: builders.schema()
- updated: builders.defaults()
- updated: builders.prepare()
- updated: controller.validate()
- updated: utils.validate()
- updated: req.hostname()
- updated: controller.close([end])
- updated: utils.httpStatus()
- updated: binary

- fixed: controller.database()
- fixed: mail.send()
- fixed: json flag
- fixed: framework.clear(), request.clear()

- improvements: saving of memory
- improvements: utils.js

- documentation (add) HttpFile
- documentation (upd) How do "views" work?
- documentation (upd) How does authorization work?
- documentation (upd) FrameworkController
- documentation (upd) FrameworkFileSystem
- documentation (upd) FrameworkViews
- documentation (upd) FrameworkController
- documentation (upd) Request.prototype

======= 1.2.9

- updated: utils.getContentType()
- updated: binary/empty-project minified debugging.js
- updated: NoSQL v2.0.2 (added: binary.update())
- updated: license

- fixed: framework.usage()
- fixed: framework.backup()
- fixed: template repository