@@ -5,6 +5,8 @@ IN DEVELOPMENT ======= 1.3.0
 - added: controller.clear()
 - added: controller.noClear()
 - added: FrameworkImage.measure(callback)
+- added: FrameworkImage.clean()
+- added: FrameworkImage.pipe(stream)
 - added: HttpFile.stream()
 - added: HttpFile.measure(callback)
 - added: framework.onRequest(req, res)
@@ -22,6 +24,7 @@ IN DEVELOPMENT ======= 1.3.0
 - added: controller.image(filename/stream, fnProcess, [headers], [isIM])
 
 - updated: FrameworkImage supports stream (image.pipe() and new Image(stream or filename))
+- updated: FrameworkImage.command()
 - updated: nosql (extended buffer)
 - updated: builders.schema()
 - updated: builders.defaults()
